# CinderPeak

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_GUIDE.md  PR_DESCRIPTION.md  Parsed_warnings.csv  README.md  SERIALIZATION_IMPLEMENTATION.md  SUBMISSION_READY.md  VERIFICATION_REPORT.md  build.py  ll.txt  main.cpp  package-lock.json
.github/workflows/: build.yml  ci.yml
build-examples/: compile_commands.json
docs/: CinderGraph.md  DOCUMENTATION_STYLE.md  Doxyfile  GraphList.md  GraphMatrix.md  Visualization.md  architecture.md  beginner-guide.md  development.md  hybrid_storage.md  index.md  installation.md  serialization.md  usage.md
docs/examples/: GraphMatrixExample.md  examples.md
examples/: IteratorExample.cpp  ListExample1.cpp  MatrixExample.cpp  PeakExample.cpp  PrimitiveGraph.cpp  VisualizationDemo.cpp
examples/Algorithms/: cinderpeak_bfs.cpp
examples/CinderGraph/: ListExample1.cpp  PrimitiveGraph.cpp  addEdge_usage.cpp  addVertex_usage.cpp  clearEdges_usage.cpp  getEdge_usage.cpp  getNeighbors_usage.cpp  hasVertex_usage.cpp  logging_via_policies_usage.cpp  numEdges_usage.cpp  numVertices_usage.cpp  operator_access_usage.cpp  quick_serialization_test.cpp  removeEdge_usage.cpp  removeVertex_usage.cpp  serialization_example.cpp  setConsoleLogging_usage.cpp  toDot_usage.cpp  updateEdge_usage.cpp
examples/GraphList/: addEdge_usage.cpp  addVertex_usage.cpp  clearEdges_usage.cpp  getEdge_usage.cpp  hasVertex_usage.cpp  numEdges_usage.cpp  numVertices_usage.cpp  removeEdge_usage.cpp  removeVertex_usage.cpp  setConsoleLogging_usage.cpp  updateEdge_usage.cpp
examples/GraphMatrix/: MatrixExample.cpp  addEdge_usage.cpp  addVertex_usage.cpp  getEdge_usage.cpp  getGraphStatistics_usage.cpp  hasVertex_usage.cpp  operator[]_usage.cpp  operator_usage.cpp  removeVertex_usage.cpp  setConsoleLogging_usage.cpp  updateEdge_usage.cpp
examples/Policies/: PoliciesExample.cpp  logex.cpp
examples/experimental/: DbgExample.cpp  HybridExample.cpp  LogExample.cpp  PeakExample.cpp
examples/extras/: HybridCSRExample1.cpp  HybridCSRExample2.cpp  HybridCSRExample3.cpp  HybridExample.cpp  PeakExample.cpp
include/cinderpeak/: CinderPeak.hpp
scripts/: auto-format.bat  auto-format.py  install-hooks.bat  install-hooks.sh
src/: Algorithms.hpp  CinderExceptions.hpp  CinderGraph.hpp  CinderPeak.hpp  Concepts.hpp  GraphConstraints.hpp  GraphEvents.hpp  GraphList.hpp  GraphMatrix.hpp  GraphRuntime.hpp  PeakLogger.hpp  PeakStore.hpp  PolicyConfiguration.hpp  Serialization.hpp  StorageInterface.hpp  Visualizer.hpp
src/Algorithms/: CinderPeakAlgorithms.hpp  GraphView.hpp  MST.hpp  Pathfinding.hpp  Search.hpp  TopologicalSort.hpp  TraversalExecution.hpp  TraversalOrdering.hpp  TraversalSemantics.hpp  TraversalSnapshot.hpp
src/Algorithms/Result/: bfs_result.hpp  dfs_result.hpp  topological_sort_result.hpp  toposort_result.hpp
src/Constraints/: Constraints.hpp
src/Events/: DefaultListeners.hpp  EventDispatcher.hpp  EventHub.hpp  GraphEvents.hpp
src/Operations/: GraphOperations.hpp
src/StorageEngine/: AdjacencyList.hpp  DbgUtils.hpp  DebugUtils.hpp  ErrorCodes.hpp  GraphContext.hpp  GraphSerialization.hpp  GraphStatistics.hpp  HybridCSR_COO.hpp  Utils.hpp  main.cpp
src/Visualization/: CMakeLists.txt  InteractiveEdge.hpp  InteractiveNode.hpp  VisualizationEngine.hpp  VisualizationTypes.hpp
src/algorithms/: CinderPeakAlgorithms.hpp
src/algorithms/result/: bfs_result.hpp
src/core/: CinderGraph.hpp  Concepts.hpp
src/engine/: GraphConstraints.hpp  GraphContext.hpp  GraphEvents.hpp  PeakStore.hpp
src/logging/: PeakLogger.hpp
src/storage/implementations/: AdjacencyList.hpp  HybridCSR_COO.hpp
src/storage/interface/: StorageInterface.hpp
src/storage/stats/: GraphRuntime.hpp
src/storage/utils/: Utils.hpp
tests/: AdjacencyShard.cpp  HybridCSRCOO.cpp  NumEdgesTest.cpp  Statistics.cpp  TestClearEdges.cpp  test_serialization.cpp
tests/integration/CinderGraph/: CinderGraphShard.cpp
tests/integration/CinderGraph/common/: DummyGraphBuilder.hpp
tests/integration/CinderGraph/functional/: addEdge_test.cpp  addVertex_test.cpp  bfs_test.cpp  clearEdges_test.cpp  exceptionPropagation_test.cpp  getEdge_test.cpp  getNeighbors_test.cpp  hasVertex_test.cpp  operatorProxyAccess_test.cpp  removeEdge_test.cpp  removeVertex_test.cpp  (+1 more)
tests/integration/GraphList/: GraphListShard.cpp
tests/integration/GraphMatrix/: GraphMatixShard.cpp
tests/unit/AdjacencyList/: AdjacencyListTestBase.hpp  AdjacencyShard.cpp  AdjacencyShardMT.cpp  addEdge_test.cpp  addEdges_test.cpp  addVertex_test.cpp  clearVertices_test.cpp  getEdge_test.cpp  hasVertex_test.cpp  has_vertex_test.cpp  removeEdge_test.cpp  removeVertex_test.cpp  toDot_test.cpp  updateEdge_test.cpp
tests/unit/AdjacencyShardTest/: UnitAdjacencyShard.cpp
tests/unit/Algorithms/: Algorithms_test.cpp  bfs_parity_test.cpp  dfs_topo_test.cpp  traversal_architecture_test.cpp  traversal_snapshot_test.cpp
tests/unit/Exceptions/: ExceptionMapping_test.cpp
tests/unit/HybridCSR_COO/: HybridCSRCOO.cpp  HybridShard.cpp  HybridStorageMT.cpp  HybridStorageShardMT.cpp  Orchestrator_test.cpp  addEdge_test.cpp  addVertex_test.cpp  clearEdges_test.cpp  clearVertices_test.cpp  doesEdgeExist_test.cpp  getEdge_test.cpp  hasVertex_test.cpp  performance_test.cpp  populateFromAdjList_test.cpp  removeEdge_test.cpp  removeVertex_test.cpp  updateEdge_test.cpp
tests/unit/Iterator/: IteratorTest.cpp
tests/unit/Policies/: CMakeLists.txt  EPShard_IgnoreAndConsoleAndFile.cpp  EPShard_IgnoreAndLogConsole.cpp  EPShard_IgnoreAndLogFile.cpp  EPShard_IgnoreAndLogFileAndConsole.cpp  EPShard_IgnoreAndSilent.cpp  EPShard_ThrowAndConsoleAndFile.cpp  EPShard_ThrowAndLog.cpp  EPShard_ThrowAndLogConsole.cpp  EPShard_ThrowAndLogFile.cpp  EPShard_ThrowAndLogFileAndConsole.cpp  EPShard_ThrowAndSilent.cpp
tests/unit/Serialization/: test_graph_serialization.cpp
tests/unit/Statistics/: Statistics.cpp  StatisticsMT.cpp
tests/unit/Utils/: LoggerLeakRepro_test.cpp  dbg_test.cpp
tests/unit/testsTest/: unitTests.cpp
(+8 files in other folders)
